2014-10-27 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-03-28: Help message updated; some cleanup;
	Do not add biglib path if biglib is disabled in the dev area.

2014-10-13 Patrick Gartung  <gartung@fnal.gov>

	* V05-03-27: Fixed dxr.config file; passed -k gmake option and
	exit with 0 for dxr rule.

2014-10-08 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-03-26: Various fixes for OSX:
	- Fix big plugin extension for OSX arch (dylib instead of so)
	- Do not pass -L<path> for non-existing local directories

2014-10-08 David Abdurachmanov  <David.Abdurachmanov@cern.ch>

	* V05-03-25: Pass --exclude-libs to only non-osx archs.

2014-10-06 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-03-24: Drop LD_UNIT_FLAGS and just use LD_UNIT flag.

2014-10-05 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-03-23: New dxr build rule added for generating dxr indexes;
	Cleanup LD_UNIT flags for big objects for osx,fc and slc archs.

2014-09-29 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-03-22: Do not generate any lcg/root dict if all files have been
	skipped e.g. <flags SKIP_FILES="%"/>

2014-09-25 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-03-21: Set CLASS for each product e..g LIBRARY, BINARY, TEST,
	TEST_LIBRARY.
	Fix creation of symlinks unders externals/arch for big objs.

	* V05-03-20: Allow to set and use LIBRARY_<flag>, BINARY_<flag>,
	and TEST_<flag> flags (CXXFLAGS, CPPFLAGS, CFLAGS, LDFLAGS etc.);
	Regenerate Serialization.cc if cond serialization script is changed;
	Fix GENREFLEX_GCCXMLOPT for flag for genreflex;

2014-09-09 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-03-19: Fixed class version update rule;
	Allow multiple LinkDef.h per package;
	Fixed absolute path in lcgdict

2014-08-27 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-03-18: Make use of new release tag in config/BuildFile.xml so that
	 same config tag can be used for all releases.

2014-08-27 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>
